--- a/contact.html
+++ b/contact.html
@@ -1,93 +1,119 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- Charset -->
-    <meta charset="UTF-8" />
+  <meta charset="UTF-8" />
+  <title>Contact – Silly Clicky Things</title>
 
-    <!-- Title -->
-    <title>Contact – Silly Clicky Things</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Viewport -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- SEO -->
+  <meta name="description"
+        content="Contact Silly Clicky Things. Report a bug, suggest a silly idea or say hi. We love hearing from fellow button clickers." />
+  <link rel="canonical" href="https://sillyclickythings.com/contact.html" />
+  <meta name="robots" content="index, follow" />
 
-    <!-- SEO -->
-    <meta name="description"
-          content="Contact Silly Clicky Things. Report a bug, suggest a silly idea or say hi. We love hearing from fellow button clickers." />
-    <link rel="canonical" href="https://sillyclickythings.com/contact.html" />
-    <meta name="robots" content="index, follow" />
+  <!-- Verification -->
+  <meta name="google-site-verification"
+        content="joAorAxKwzYep5JybdSaFzleef91tKhWqGm6ABCo9uM" />
 
-    <!-- Verification -->
-    <meta name="google-site-verification"
-          content="joAorAxKwzYep5JybdSaFzleef91tKhWqGm6ABCo9uM" />
+  <!-- Open Graph -->
+  <meta property="og:type" content="article" />
+  <meta property="og:site_name" content="Silly Clicky Things" />
+  <meta property="og:title" content="Contact – Silly Clicky Things" />
+  <meta property="og:description"
+        content="Contact Silly Clicky Things. Report a bug, suggest a silly idea or say hi. We love hearing from fellow button clickers." />
+  <meta property="og:url" content="https://sillyclickythings.com/contact.html" />
 
-    <!-- Open Graph -->
-    <meta property="og:type" content="article" />
-    <meta property="og:site_name" content="Silly Clicky Things" />
-    <meta property="og:title"
-          content="Contact – Silly Clicky Things" />
-    <meta property="og:description"
-          content="Contact Silly Clicky Things. Report a bug, suggest a silly idea or say hi. We love hearing from fellow button clickers." />
-    <meta property="og:url" content="https://sillyclickythings.com/contact.html" />
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:title" content="Contact – Silly Clicky Things" />
+  <meta name="twitter:description"
+        content="Contact Silly Clicky Things. Report a bug, suggest a silly idea or say hi. We love hearing from fellow button clickers." />
 
-    <!-- Twitter Card -->
-    <meta name="twitter:card" content="summary" />
-    <meta name="twitter:title"
-          content="Contact – Silly Clicky Things" />
-    <meta name="twitter:description"
-          content="Contact Silly Clicky Things. Report a bug, suggest a silly idea or say hi. We love hearing from fellow button clickers." />
+  <!-- JSON-LD -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "ContactPage",
+    "name": "Contact – Silly Clicky Things",
+    "url": "https://sillyclickythings.com/contact.html",
+    "description": "Contact Silly Clicky Things. Report a bug, suggest a silly idea or say hi. We love hearing from fellow button clickers."
+  }
+  </script>
 
-    <!-- JSON-LD -->
-    <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "ContactPage",
-      "name": "Contact – Silly Clicky Things",
-      "url": "https://sillyclickythings.com/contact.html",
-      "description": "Contact Silly Clicky Things. Report a bug, suggest a silly idea or say hi. We love hearing from fellow button clickers."
-    }
-    </script>
+  <!-- Global CSS -->
+  <link rel="stylesheet" href="/css/main.css" />
 
-    <!-- Global CSS -->
-    <link rel="stylesheet" href="/css/base.css">
-    <link rel="stylesheet" href="/css/theme.css">
-    <link rel="stylesheet" href="/css/utils.css">
-
-    <!-- counter.dev analytics -->
-    <script src="https://cdn.counter.dev/script.js"
-            data-id="0738f13f-0c45-4dc5-8912-f18d6766a843"
-            data-utcoffset="0"></script>
+  <!-- counter.dev analytics -->
+  <script src="https://cdn.counter.dev/script.js"
+          data-id="0738f13f-0c45-4dc5-8912-f18d6766a843"
+          data-utcoffset="0"></script>
 </head>
 
 <body class="sct-page">
-    <main class="sct-main">
-        <div class="sct-shell">
-            <div id="site-header"></div>
-            <div class="sct-container">
-                <div class="sct-glow" aria-hidden="true"></div>
-                <div class="sct-content">
-                    <h1 class="sct-heading">
-                        Contact <span>Silly Clicky Things</span>
-                    </h1>
+  <div class="sct-grid">
+    <!-- Left column (ads later) -->
+    <aside class="sct-side"></aside>
 
-                  <div class="sct-article">
+    <!-- Center column -->
+    <div class="sct-center">
+      <!-- Row 1: header -->
+      <div id="site-header"></div>
 
-                    <p>Welcome to Silly Clicky Things!</p>
+      <!-- Row 2: main frame -->
+      <div class="sct-frame">
+        <div class="sct-container">
+          <div class="sct-glow" aria-hidden="true"></div>
 
-                    <p>This project creates tiny, simple, pointless, fun games. The kind of things you click when you’re bored, curious or avoiding real responsibilities...</p>
+          <div class="sct-content">
+            <h1 class="sct-heading">
+              Contact <span>Silly Clicky Things</span>
+            </h1>
 
-                    <p>No accounts. No downloads. No data mining. Just silly, interactive toys and fun browser games like <em>CatXP</em>. More coming soon.</p>
+            <div class="sct-article">
+              <p>Welcome to Silly Clicky Things!</p>
 
-                    <h2>Contact Me</h2>
-                    <p>If you want to report a bug, suggest an idea or just say hi, I'd absolutely love to hear from you:</p>
+              <p>
+                This project creates tiny, simple, pointless, fun games.
+                The kind of thing you click when you’re bored, curious and/or avoiding real responsibilities.
+              </p>
 
-                    <p><strong>Email:</strong>
-                        <a href="mailto:sillyclickythings@gmail.com">
-                        </a> sillyclickythings@gmail.com
-                    </p>
-                    </div>
-                </div>
+              <p>
+                No accounts. No downloads. No data mining.
+                Just silly, interactive toys and fun browser games like
+                <em>CatXP</em>. More coming soon.
+              </p>
+
+              <h2>Contact Me</h2>
+              <p>
+                If you want to report a bug, suggest an idea or just say hi,
+                I’d absolutely love to hear from you:
+              </p>
+
+              <p>
+                <strong>Email:</strong>
+                <a href="mailto:sillyclickythings@gmail.com">
+                  sillyclickythings@gmail.com
+                </a>
+              </p>
             </div>
+          </div>
         </div>
-    </main>
+      </div>
+      <!-- Bottom ad slot (reserved) -->
+      <div class="sct-ad-slot">
+        <div class="sct-ad-placeholder">
+        </div>
+      </div>
+      <!-- Row 3: footer -->
+      <div id="site-footer"></div>
+    </div>
+
+    <!-- Right column (ads later) -->
+    <aside class="sct-side"></aside>
+  </div>
+
+  <!-- Shared includes loader -->
+  <script src="/js/include.js"></script>
 </body>
 </html>
