--- a/index.html
+++ b/index.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- Charset -->
     <meta charset="UTF-8" />
-
-    <!-- Title -->
     <title>Silly Clicky Things – Tiny Games, Pointless Buttons & Free Clicker Toys</title>
 
     <!-- Viewport -->
@@ -19,6 +16,11 @@
     <!-- Verification -->
     <meta name="google-site-verification"
           content="joAorAxKwzYep5JybdSaFzleef91tKhWqGm6ABCo9uM" />
+
+    <!-- counter.dev analytics -->
+    <script src="https://cdn.counter.dev/script.js"
+            data-id="0738f13f-0c45-4dc5-8912-f18d6766a843"
+            data-utcoffset="0"></script>
 
     <!-- Open Graph -->
     <meta property="og:type" content="website" />
@@ -52,74 +54,71 @@
     </script>
 
     <!-- Global CSS -->
-    <link rel="stylesheet" href="/css/base.css">
-    <link rel="stylesheet" href="/css/theme.css">
-    <link rel="stylesheet" href="/css/utils.css">
+    <link rel="stylesheet" href="/css/main.css">
 
-    <!-- counter.dev analytics -->
-    <script src="https://cdn.counter.dev/script.js"
-            data-id="0738f13f-0c45-4dc5-8912-f18d6766a843"
-            data-utcoffset="0"></script>
 </head>
 
 <body class="sct-page sct-landing-page">
-    <main class="sct-main">
-        <div class="sct-shell">
-            <div id="site-header"></div>
-            <div class="sct-container">
-                <div class="sct-glow" aria-hidden="true"></div>
+  <div class="sct-grid">
+    <!-- Left column (ads later) -->
+    <aside class="sct-side"></aside>
 
-                <div class="sct-content">
-                    <div class="sct-tagline">
-                        <span class="sct-tagline-dot"></span>
-                        <span>Coming soon</span>
-                        <span>•</span>
-                        <span>Very serious clicking research</span>
-                    </div>
+    <!-- Center column -->
+    <div class="sct-center">
+      <!-- Row 1: header -->
+      <div id="site-header"></div>
 
-                    <h1 class="sct-heading">
-                        Welcome to <span>Silly Clicky Things</span>
-                    </h1>
+      <!-- Row 2: main frame -->
+      <div class="sct-frame">
+        <div class="sct-container">
+          <div class="sct-glow" aria-hidden="true"></div>
 
-                    <p class="sct-subtitle">
-                        Tiny pointless websites. Extremely important clicks.
-                        The games are brewing behind the scenes. Witches, frogs, blobs, potatoes, cats &amp; other oddities incoming. 🐸🐱🐇
-                    </p>
-
-                    <div class="sct-cta-row">
-                        <a class="sct-btn-primary" href="generators/tap-the-lucky-rabbit-paw/">
-                            <span>Click the Lucky Rabbit Paw</span>
-                        </a>
-                        <span class="sct-hint">Start your lucky streak while we build the rest.</span>
-                    </div>
-
-                    <div class="sct-footer-note">
-                        <span>🔧</span>
-                        <span>More silly clicky experiments will appear here soon. Refresh occasionally for the sake of science and silly fun times.</span>
-                    </div>
-                </div>
+          <div class="sct-content">
+            <div class="sct-tagline">
+              <span class="sct-tagline-dot"></span>
+              <span>Coming soon</span>
+              <span>•</span>
+              <span>Very serious clicking research</span>
             </div>
 
-            
-        </div>
-    </main>
-    <div id="site-footer"></div>
-        <script>
-        const headerEl = document.getElementById('site-header');
-        if (headerEl) {
-            fetch('/includes/header.html')
-            .then(r => r.text())
-            .then(html => { headerEl.innerHTML = html; })
-            .catch(err => console.error('Header include failed:', err));
-        }
+            <h1 class="sct-heading">
+              Welcome to <span>Silly Clicky Things</span>
+            </h1>
 
-        const footerEl = document.getElementById('site-footer');
-        if (footerEl) {
-            fetch('/includes/footer.html')
-            .then(r => r.text())
-            .then(html => { footerEl.innerHTML = html; })
-            .catch(err => console.error('Footer include failed:', err));
-        }
-    </script>
+            <p class="sct-subtitle">
+              Tiny pointless websites. Extremely important clicks.
+              The games are brewing behind the scenes. Witches, frogs, blobs, potatoes, cats &amp; other oddities incoming. 🐸🐱🐇
+            </p>
+
+            <div class="sct-cta-row">
+              <a class="sct-btn-primary" href="/generators/tap-the-lucky-rabbit-paw/">
+                <span>Click the Lucky Rabbit Paw</span>
+              </a>
+              <span class="sct-hint">Start your lucky streak while we build the rest.</span>
+            </div>
+
+            <div class="sct-footer-note">
+              <span>🔧</span>
+              <span>More silly clicky experiments will appear here soon. Refresh occasionally for the sake of science and silly fun times.</span>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Bottom ad slot (reserved) -->
+      <div class="sct-ad-slot">
+        <div class="sct-ad-placeholder">
+        </div>
+      </div>
+      <!-- Row 3: footer -->
+      <div id="site-footer"></div>
+    </div>
+
+    <!-- Right column (ads later) -->
+    <aside class="sct-side"></aside>
+  </div>
+
+  <!-- Shared includes loader -->
+  <script src="/js/include.js"></script>
 </body>
 </html>
+
