--- a/privacy.html
+++ b/privacy.html
@@ -1,103 +1,146 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- Charset -->
-    <meta charset="UTF-8" />
+  <meta charset="UTF-8" />
+  <title>Privacy Policy – Silly Clicky Things</title>
 
-    <!-- Title -->
-    <title>Privacy Policy – Silly Clicky Things</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Viewport -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- SEO -->
+  <meta name="description"
+        content="Privacy policy for Silly Clicky Things. We do not require accounts, collect personal data, or sell information. Just silly games and simple analytics." />
+  <link rel="canonical" href="https://sillyclickythings.com/privacy.html" />
+  <meta name="robots" content="index, follow" />
 
-    <!-- SEO -->
-    <meta name="description"
-          content="Privacy policy for Silly Clicky Things. We do not require accounts, collect personal data, or sell information. Just silly games and simple analytics." />
-    <link rel="canonical" href="https://sillyclickythings.com/privacy.html" />
-    <meta name="robots" content="index, follow" />
+  <!-- Verification -->
+  <meta name="google-site-verification"
+        content="joAorAxKwzYep5JybdSaFzleef91tKhWqGm6ABCo9uM" />
 
-    <!-- Verification -->
-    <meta name="google-site-verification"
-          content="joAorAxKwzYep5JybdSaFzleef91tKhWqGm6ABCo9uM" />
+  <!-- Open Graph -->
+  <meta property="og:type" content="article" />
+  <meta property="og:site_name" content="Silly Clicky Things" />
+  <meta property="og:title" content="Privacy Policy – Silly Clicky Things" />
+  <meta property="og:description"
+        content="Privacy policy for Silly Clicky Things. We do not require accounts, collect personal data or sell information. Just silly games and simple analytics." />
+  <meta property="og:url" content="https://sillyclickythings.com/privacy.html" />
 
-    <!-- Open Graph -->
-    <meta property="og:type" content="article" />
-    <meta property="og:site_name" content="Silly Clicky Things" />
-    <meta property="og:title"
-          content="Privacy Policy – Silly Clicky Things" />
-    <meta property="og:description"
-          content="Privacy policy for Silly Clicky Things. We do not require accounts, collect personal data or sell information. Just silly games and simple analytics." />
-    <meta property="og:url" content="https://sillyclickythings.com/privacy.html" />
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:title" content="Privacy Policy – Silly Clicky Things" />
+  <meta name="twitter:description"
+        content="Privacy policy for Silly Clicky Things. We do not require accounts, collect personal data or sell information. Just silly games and simple analytics." />
 
-    <!-- Twitter Card -->
-    <meta name="twitter:card" content="summary" />
-    <meta name="twitter:title"
-          content="Privacy Policy – Silly Clicky Things" />
-    <meta name="twitter:description"
-          content="Privacy policy for Silly Clicky Things. We do not require accounts, collect personal data or sell information. Just silly games and simple analytics." />
+  <!-- JSON-LD -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "name": "Privacy Policy – Silly Clicky Things",
+    "url": "https://sillyclickythings.com/privacy.html",
+    "description": "Privacy policy for Silly Clicky Things. We do not require accounts, collect personal data or sell information. Just silly games and simple analytics."
+  }
+  </script>
 
-    <!-- JSON-LD -->
-    <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "WebPage",
-      "name": "Privacy Policy – Silly Clicky Things",
-      "url": "https://sillyclickythings.com/privacy.html",
-      "description": "Privacy policy for Silly Clicky Things. We do not require accounts, collect personal data or sell information. Just silly games and simple analytics."
-    }
-    </script>
+  <!-- Global CSS -->
+  <link rel="stylesheet" href="/css/main.css" />
 
-    <!-- Global CSS -->
-    <link rel="stylesheet" href="/css/base.css">
-    <link rel="stylesheet" href="/css/theme.css">
-    <link rel="stylesheet" href="/css/utils.css">
-
-    <!-- counter.dev analytics -->
-    <script src="https://cdn.counter.dev/script.js"
-            data-id="0738f13f-0c45-4dc5-8912-f18d6766a843"
-            data-utcoffset="0"></script>
+  <!-- counter.dev analytics -->
+  <script src="https://cdn.counter.dev/script.js"
+          data-id="0738f13f-0c45-4dc5-8912-f18d6766a843"
+          data-utcoffset="0"></script>
 </head>
+
 <body class="sct-page">
-    <main class="sct-main">
-        <div class="sct-shell">
-            <div id="site-header"></div>
-            <div class="sct-container">
-                <div class="sct-glow" aria-hidden="true"></div>
-                <div class="sct-content">
-                   <div class="sct-article">
-                    <h1>Privacy Policy</h1>
-                    <p>Last updated: 2025</p>
+  <div class="sct-grid">
+    <!-- Left column (ads later) -->
+    <aside class="sct-side"></aside>
 
-                    <p>This website (“the Site”) is a simple, entertainment-based web experience created by Silly Clicky Things. We respect your privacy and aim to keep things as lightweight as possible.</p>
+    <!-- Center column -->
+    <div class="sct-center">
+      <!-- Row 1: header -->
+      <div id="site-header"></div>
 
-                    <h2>Information We Collect</h2>
-                    <p>We do not collect personal information, such as names, email addresses, or account details. The Site contains no login, signup, or form submissions.</p>
+      <!-- Row 2: main frame -->
+      <div class="sct-frame">
+        <div class="sct-container">
+          <div class="sct-glow" aria-hidden="true"></div>
 
-                    <h2>Analytics</h2>
-                    <p>We use Counter.dev, a privacy-friendly, cookie-free analytics service. Counter.dev does not track personal information, set cookies, or store identifiable data. It only collects anonymous usage statistics such as:</p>
-                    <ul>
-                      <li>Page views</li>
-                      <li>Approximate location (country/city)</li>
-                      <li>Device type</li>
-                      <li>Referring website</li>
-                    </ul>
-                    <p>This data helps us understand which features people enjoy and improve the Site over time.</p>
+          <div class="sct-content">
+            <div class="sct-article">
+              <h1>Privacy Policy</h1>
+              <p>Last updated: 2025</p>
 
-                    <h2>Third-Party Links</h2>
-                    <p>The Site may include links to other websites. We are not responsible for third-party content or their privacy practices.</p>
+              <p>
+                This website (“the Site”) is a simple, entertainment-based web experience
+                created by Silly Clicky Things. We respect your privacy and aim to keep
+                things as lightweight as possible.
+              </p>
 
-                    <h2>Advertising (Potential Future Use)</h2>
-                    <p>We may use Google AdSense in the future. Google may use cookies to serve personalized ads. If this occurs, we will update this Policy to reflect Google’s current requirements and provide clear opt-out options.</p>
+              <h2>Information We Collect</h2>
+              <p>
+                We do not collect personal information, such as names, email addresses,
+                or account details. The Site contains no login, signup, or form submissions.
+              </p>
 
-                    <h2>Children’s Privacy</h2>
-                    <p>This Site is not targeted at children under 13. However, we do not knowingly collect personal data from any user.</p>
+              <h2>Analytics</h2>
+              <p>
+                We use Counter.dev, a privacy-friendly, cookie-free analytics service.
+                Counter.dev does not track personal information, set cookies, or store
+                identifiable data. It only collects anonymous usage statistics such as:
+              </p>
+              <ul>
+                <li>Page views</li>
+                <li>Approximate location (country/city)</li>
+                <li>Device type</li>
+                <li>Referring website</li>
+              </ul>
+              <p>
+                This data helps us understand which features people enjoy and improve
+                the Site over time.
+              </p>
 
-                    <h2>Contact</h2>
-                    <p>If you have questions, please email: <strong>sillyclickythings@gmail.com</strong></p>
-                   </div>
-                </div> 
+              <h2>Third-Party Links</h2>
+              <p>
+                The Site may include links to other websites. We are not responsible
+                for third-party content or their privacy practices.
+              </p>
+
+              <h2>Advertising (Potential Future Use)</h2>
+              <p>
+                We may use Google AdSense in the future. Google may use cookies to serve
+                personalized ads. If this occurs, we will update this Policy to reflect
+                Google’s current requirements and provide clear opt-out options.
+              </p>
+
+              <h2>Children’s Privacy</h2>
+              <p>
+                This Site is not targeted at children under 13. However, we do not
+                knowingly collect personal data from any user.
+              </p>
+
+              <h2>Contact</h2>
+              <p>
+                If you have questions, please email:
+                <strong>sillyclickythings@gmail.com</strong>
+              </p>
             </div>
+          </div>
         </div>
-    </main>
+      </div>
+      <!-- Bottom ad slot (reserved) -->
+      <div class="sct-ad-slot">
+        <div class="sct-ad-placeholder">
+        </div>
+      </div>
+      <!-- Row 3: footer -->
+      <div id="site-footer"></div>
+    </div>
+
+    <!-- Right column (ads later) -->
+    <aside class="sct-side"></aside>
+  </div>
+
+  <!-- Shared includes loader -->
+  <script src="/js/include.js"></script>
 </body>
 </html>
