--- a/terms.html
+++ b/terms.html
@@ -1,102 +1,120 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- Charset -->
-    <meta charset="UTF-8" />
+  <meta charset="UTF-8" />
+  <title>Terms of Use – Silly Clicky Things</title>
 
-    <!-- Title -->
-    <title>Terms of Use – Silly Clicky Things</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Viewport -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- SEO -->
+  <meta name="description"
+        content="Terms of use for Silly Clicky Things, a website offering free, silly, pointless online games and generators for entertainment purposes only." />
+  <link rel="canonical" href="https://sillyclickythings.com/terms.html" />
+  <meta name="robots" content="index, follow" />
 
-    <!-- SEO -->
-    <meta name="description"
-          content="Terms of use for Silly Clicky Things, a website offering free, silly, pointless online games and generators for entertainment purposes only." />
-    <link rel="canonical" href="https://sillyclickythings.com/terms.html" />
-    <meta name="robots" content="index, follow" />
+  <!-- Verification -->
+  <meta name="google-site-verification"
+        content="joAorAxKwzYep5JybdSaFzleef91tKhWqGm6ABCo9uM" />
 
-    <!-- Verification -->
-    <meta name="google-site-verification"
-          content="joAorAxKwzYep5JybdSaFzleef91tKhWqGm6ABCo9uM" />
+  <!-- Open Graph -->
+  <meta property="og:type" content="article" />
+  <meta property="og:site_name" content="Silly Clicky Things" />
+  <meta property="og:title" content="Terms of Use – Silly Clicky Things" />
+  <meta property="og:description"
+        content="Terms of use for Silly Clicky Things, a website offering free, silly, pointless online games and generators for entertainment purposes only." />
+  <meta property="og:url" content="https://sillyclickythings.com/terms.html" />
 
-    <!-- Open Graph -->
-    <meta property="og:type" content="article" />
-    <meta property="og:site_name" content="Silly Clicky Things" />
-    <meta property="og:title"
-          content="Terms of Use – Silly Clicky Things" />
-    <meta property="og:description"
-          content="Terms of use for Silly Clicky Things, a website offering free, silly, pointless online games and generators for entertainment purposes only." />
-    <meta property="og:url" content="https://sillyclickythings.com/terms.html" />
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:title" content="Terms of Use – Silly Clicky Things" />
+  <meta name="twitter:description"
+        content="Terms of use for Silly Clicky Things, a website offering free, silly, pointless online games and generators for entertainment purposes only." />
 
-    <!-- Twitter Card -->
-    <meta name="twitter:card" content="summary" />
-    <meta name="twitter:title"
-          content="Terms of Use – Silly Clicky Things" />
-    <meta name="twitter:description"
-          content="Terms of use for Silly Clicky Things, a website offering free, silly, pointless online games and generators for entertainment purposes only." />
+  <!-- JSON-LD -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "name": "Terms of Use – Silly Clicky Things",
+    "url": "https://sillyclickythings.com/terms.html",
+    "description": "Terms of use for Silly Clicky Things, a website offering free, silly, pointless online games and generators for entertainment purposes only."
+  }
+  </script>
 
-    <!-- JSON-LD -->
-    <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "WebPage",
-      "name": "Terms of Use – Silly Clicky Things",
-      "url": "https://sillyclickythings.com/terms.html",
-      "description": "Terms of use for Silly Clicky Things, a website offering free, silly, pointless online games and generators for entertainment purposes only."
-    }
-    </script>
+  <!-- Global CSS -->
+  <link rel="stylesheet" href="/css/main.css" />
 
-    <!-- Global CSS -->
-    <link rel="stylesheet" href="/css/base.css">
-    <link rel="stylesheet" href="/css/theme.css">
-    <link rel="stylesheet" href="/css/utils.css">
-
-    <!-- counter.dev analytics -->
-    <script src="https://cdn.counter.dev/script.js"
-            data-id="0738f13f-0c45-4dc5-8912-f18d6766a843"
-            data-utcoffset="0"></script>
+  <!-- counter.dev analytics -->
+  <script src="https://cdn.counter.dev/script.js"
+          data-id="0738f13f-0c45-4dc5-8912-f18d6766a843"
+          data-utcoffset="0"></script>
 </head>
+
 <body class="sct-page">
-    <main class="sct-main">
-        <div class="sct-shell">
-            <div id="site-header"></div>
-            <div class="sct-container">
-                <div class="sct-glow" aria-hidden="true"></div>
-                <div class="sct-content">
-                  <div class="sct-article">
-                    <h1>Terms of Use</h1>
-                    <p>Last updated: 2025</p>
+  <div class="sct-grid">
+    <!-- Left column (ads later) -->
+    <aside class="sct-side"></aside>
 
-                    <p>By using this website (“the Site”), you agree to the following terms.</p>
+    <!-- Center column -->
+    <div class="sct-center">
+      <!-- Row 1: header -->
+      <div id="site-header"></div>
 
-                    <h2>1. Purpose of the Site</h2>
-                    <p>This Site is provided for entertainment only. It contains simple interactive features, games, and playful content.</p>
+      <!-- Row 2: main frame -->
+      <div class="sct-frame">
+        <div class="sct-container">
+          <div class="sct-glow" aria-hidden="true"></div>
 
-                    <h2>2. No Warranty</h2>
-                    <p>The Site is provided “as is.” We make no guarantees about uptime, performance, accuracy, or results.</p>
+          <div class="sct-content">
+            <div class="sct-article">
+              <h1>Terms of Use</h1>
+              <p>Last updated: 2025</p>
 
-                    <h2>3. Acceptable Use</h2>
-                    <ul>
-                      <li>Do not attempt to hack, exploit, or break the Site.</li>
-                      <li>Do not use the Site in a way that violates any laws.</li>
-                    </ul>
+              <p>By using this website (“the Site”), you agree to the following terms.</p>
 
-                    <h2>4. Intellectual Property</h2>
-                    <p>All images, artwork, and code used on the Site belong to Silly Clicky Things unless otherwise stated.</p>
+              <h2>1. Purpose of the Site</h2>
+              <p>This Site is provided for entertainment only. It contains simple interactive features, games, and playful content.</p>
 
-                    <h2>5. Links to Other Sites</h2>
-                    <p>The Site may link to third-party websites. We are not responsible for their content or practices.</p>
+              <h2>2. No Warranty</h2>
+              <p>The Site is provided “as is.” We make no guarantees about uptime, performance, accuracy, or results.</p>
 
-                    <h2>6. Updates</h2>
-                    <p>We may update these Terms at any time. Continued use of the Site means you accept any changes.</p>
+              <h2>3. Acceptable Use</h2>
+              <ul>
+                <li>Do not attempt to hack, exploit, or break the Site.</li>
+                <li>Do not use the Site in a way that violates any laws.</li>
+              </ul>
 
-                    <h2>7. Contact</h2>
-                    <p>Email: <strong>sillyclickythings@gmail.com</strong></p>
-                  </div>
-                </div>
+              <h2>4. Intellectual Property</h2>
+              <p>All images, artwork, and code used on the Site belong to Silly Clicky Things unless otherwise stated.</p>
+
+              <h2>5. Links to Other Sites</h2>
+              <p>The Site may link to third-party websites. We are not responsible for their content or practices.</p>
+
+              <h2>6. Updates</h2>
+              <p>We may update these Terms at any time. Continued use of the Site means you accept any changes.</p>
+
+              <h2>7. Contact</h2>
+              <p>Email: <strong>sillyclickythings@gmail.com</strong></p>
             </div>
+          </div>
         </div>
-    </main>
+      </div>
+
+      <!-- Bottom ad slot (reserved) -->
+      <div class="sct-ad-slot">
+        <div class="sct-ad-placeholder">
+        </div>
+      </div>
+
+      <!-- Row 3: footer -->
+      <div id="site-footer"></div>
+    </div>
+
+    <!-- Right column (ads later) -->
+    <aside class="sct-side"></aside>
+  </div>
+
+  <!-- Shared includes loader -->
+  <script src="/js/include.js"></script>
 </body>
 </html>
